@@ -1,3 +1,8 @@
+2001-10-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-expand-path-name): Fix incompatibility of drive
+	letter.
+
 2001-10-11  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m-e21.el (toplevel): Require 'wid-edit.
